# local-library-api

./: Cargo.toml  README.md  routes.txt
src/: database.rs  lib.rs  main.rs
src/controllers/: author_controller.rs  book_controller.rs  mod.rs
src/models/: author.rs  book.rs  book_instance.rs  genre.rs  mod.rs
src/routes/: author_routes.rs  book_routes.rs  index.rs  mod.rs  users.rs
