[package]
name = "axum-local-library"
version = "0.1.0"
edition = "2021"
default-run = "axum-local-library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["trace"] }
dotenv = "0.15"
mongodb = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2", features = ["chrono-0_4", "serde_with"] }

# https://github.com/mongodb/bson-rust/issues/303#issuecomment-1198026738
serde_with = { version = "1.14", features = [] }
# futures = "0.3"
